[Update] Implemented IsFollower
